--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,9 @@ Flask==2.0.3
 tensorflow==2.8.0
 opencv-python-headless==4.5.5.64
 numpy==1.21.4
+rembg
+mysql.connector
+Python 3.8.2
+Flask 3.0.3
+Werkzeug 3.0.3
+pip 24.1.2 from
