--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,80 @@
-pip==24.1.2
+absl-py==2.1.0
+astunparse==1.6.3
+attrs==23.2.0
+blinker==1.8.2
+cachetools==5.4.0
+certifi==2024.7.4
+charset-normalizer==3.3.2
+click==8.1.7
+coloredlogs==15.0.1
+distlib==0.3.8
+filelock==3.15.4
 Flask==2.0.3
-tensorflow==2.8.0
-opencv-python-headless==4.5.5.64
+flatbuffers==24.3.25
+gast==0.6.0
+google-auth==2.32.0
+google-auth-oauthlib==0.4.6
+google-pasta==0.2.0
+grpcio==1.65.1
+h5py==3.11.0
+humanfriendly==10.0
+idna==3.7
+imageio==2.34.2
+importlib_metadata==8.0.0
+importlib_resources==6.4.0
+itsdangerous==2.2.0
+Jinja2==3.1.4
+jsonschema==4.23.0
+jsonschema-specifications==2023.12.1
+keras==2.8.0
+Keras-Preprocessing==1.1.2
+lazy_loader==0.4
+libclang==18.1.1
+llvmlite==0.41.1
+Markdown==3.6
+MarkupSafe==2.1.5
+mpmath==1.3.0
+mysql-connector==2.2.9
+mysql-connector-python==9.0.0
+networkx==3.1
+numba==0.58.0
 numpy==1.21.4
-rembg
-mysql.connector
+oauthlib==3.2.2
+onnxruntime==1.12.1
+opencv-python-headless==4.5.5.64
+opt-einsum==3.3.0
+packaging==24.1
+pillow==10.4.0
+pkgutil_resolve_name==1.3.10
+platformdirs==4.2.2
+pooch==1.8.2
+protobuf==5.27.2
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+PyMatting==1.1.12
+PyWavelets==1.4.1
+referencing==0.35.1
+rembg==2.0.57
+requests==2.32.3
+requests-oauthlib==2.0.0
+rpds-py==0.19.1
+rsa==4.9
+scikit-image==0.21.0
+scipy==1.10.1
+six==1.15.0
+sympy==1.13.1
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-io-gcs-filesystem==0.34.0
+termcolor==2.4.0
+tf-estimator-nightly==2.8.0.dev2021122109
+tifffile==2023.7.10
+tqdm==4.66.4
+typing_extensions==4.12.2
+urllib3==2.2.2
+virtualenv==20.26.3
 Werkzeug==3.0.3
+wrapt==1.16.0
+zipp==3.19.2
